{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 42,
  "lineage": "0e09b2fc-9b3d-23dd-6de8-c468946df028",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012fe88fc9f00e280",
            "arn": "arn:aws:ec2:ap-south-1:047861165149:elastic-ip/eipalloc-012fe88fc9f00e280",
            "domain": "vpc",
            "id": "eipalloc-012fe88fc9f00e280",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-161-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.161.23",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "3tier-app"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa81b110eaee13f2",
            "arn": "arn:aws:ec2:ap-south-1:047861165149:elastic-ip/eipalloc-0fa81b110eaee13f2",
            "domain": "vpc",
            "id": "eipalloc-0fa81b110eaee13f2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-9-33.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.9.33",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "3tier-app"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:internet-gateway/igw-0c68009ec0023ebf7",
            "id": "igw-0c68009ec0023ebf7",
            "owner_id": "047861165149",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "3tier-app"
            },
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "thistest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012fe88fc9f00e280",
            "association_id": "eipassoc-0af7e9d20c3386f65",
            "connectivity_type": "public",
            "id": "nat-0b452c74eac623f62",
            "network_interface_id": "eni-01b0f4f61d8b50f2b",
            "private_ip": "192.168.6.32",
            "public_ip": "43.204.161.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ed6dc3ccd058352",
            "tags": {
              "Name": "dev-nat-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-0",
              "Project": "3tier-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa81b110eaee13f2",
            "association_id": "eipassoc-094345bdf1fb67b6a",
            "connectivity_type": "public",
            "id": "nat-0ab776b72a66a5cd3",
            "network_interface_id": "eni-0fc717fe4546a2358",
            "private_ip": "192.168.28.38",
            "public_ip": "3.7.9.33",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b965c43fa69d022",
            "tags": {
              "Name": "dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-1",
              "Project": "3tier-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0943e4610163bf0b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b452c74eac623f62",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0943e4610163bf0b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.thistest",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c68009ec0023ebf7",
            "id": "r-rtb-0552180312590a6561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0552180312590a656",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.TESTVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:route-table/rtb-0943e4610163bf0b4",
            "id": "rtb-0943e4610163bf0b4",
            "owner_id": "047861165149",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "3tier-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:route-table/rtb-0552180312590a656",
            "id": "rtb-0552180312590a656",
            "owner_id": "047861165149",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "3tier-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed943d995f62dcb",
            "route_table_id": "rtb-0943e4610163bf0b4",
            "subnet_id": "subnet-0c1f8ebc12c8f4c8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2e11cad882ca30c",
            "route_table_id": "rtb-0943e4610163bf0b4",
            "subnet_id": "subnet-0df7ce2a5fb82ddaf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cada584fc487db4b",
            "route_table_id": "rtb-0552180312590a656",
            "subnet_id": "subnet-09ed6dc3ccd058352"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac0e685b460183e",
            "route_table_id": "rtb-0552180312590a656",
            "subnet_id": "subnet-02b965c43fa69d022"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:subnet/subnet-0c1f8ebc12c8f4c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f8ebc12c8f4c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047861165149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-0",
              "Project": "3tier-app"
            },
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:subnet/subnet-0df7ce2a5fb82ddaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df7ce2a5fb82ddaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047861165149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-1",
              "Project": "3tier-app"
            },
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:subnet/subnet-09ed6dc3ccd058352",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed6dc3ccd058352",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047861165149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-0",
              "Project": "3tier-app"
            },
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:subnet/subnet-02b965c43fa69d022",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b965c43fa69d022",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047861165149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-1",
              "Project": "3tier-app"
            },
            "vpc_id": "vpc-00ec2f985cbe1e83a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TESTVPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TESTVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:047861165149:vpc/vpc-00ec2f985cbe1e83a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09de39f3aff26f367",
            "default_route_table_id": "rtb-001aa07586edfb6a0",
            "default_security_group_id": "sg-0a36b0f58689c3e95",
            "dhcp_options_id": "dopt-02ee393eeb3dfad93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ec2f985cbe1e83a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001aa07586edfb6a0",
            "owner_id": "047861165149",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "3tier-app"
            }
          }
        }
      ]
    }
  ]
}